--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:theme="@style/Theme.Software_PROJECT_31"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LocationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".details"
+            android:exported="false" />
+        <activity
             android:name=".BeachListActivity"
             android:exported="false" />
         <activity
